setting up libs

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,37 +4,36 @@ header {
 
 section {
   height: 94vh;
-  overflow: hidden;
-
-  aside {
-    width: 15rem;
-  }
+  display: flex;
+  transition: all 0.3s ease-in-out;
 
   .sidebar {
     position: fixed;
-    left: 0;
-    top: 0;
-    width: 250px;
-    height: 100vh;
-    background: #333;
-    color: white;
+    width: 15rem;
     padding: 20px;
-    transition: transform 0.3s ease-in-out; /* Smooth animation */
+    background-color: #fff;
+    transition: transform 0.3s ease-in-out;
+    width: 15rem;
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      li a {
+        font-size: 1.125rem;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        color: #000;
+      }
+    }
   }
 
-  .sidebar.hidden {
-    transform: translateX(-100%); /* Move sidebar out of view */
-  }
-
-  .hamburger {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    font-size: 24px;
-    background: none;
-    border: none;
-    color: white;
-    cursor: pointer;
+  .main-content {
+    padding: 20px;
+    background-color: #f4f4f4;
+    transition: width 0.3s ease-in-out, margin-left 0.3s ease-in-out;
+    margin-left: auto;
   }
 }
-
