--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,22 +8,30 @@
       <button
         class="w-10 h-10 rounded-full overflow-hidden border-2 border-gray-300 focus:outline-none"
       >
-        <img src="assets/user.jpg" alt="User Avatar" />
+        <img src="user.png" alt="User Avatar" />
       </button>
     </div>
   </nav>
 </header>
 
-<section class="flex border border-red-800">
-  <aside class="h-full border-2" [@slide]="isHidden() ? 'closed' : 'open'">
-    <h3>Sidebar</h3>
+<section [@.disabled]="animationsDisabled()">
+  @if(!isHidden()) {
+  <aside class="h-full sidebar" [@slide]="isHidden() ? 'closed' : 'open'">
     <ul>
-      <li><a href="#">Related Link 1</a></li>
-      <li><a href="#">Related Link 2</a></li>
+      <li>
+        <a href="expenses"><mat-icon color="primary">shopping_cart</mat-icon> Gastos</a>
+      </li>
+      <li>
+        <a href="categories"><mat-icon color="primary">folder</mat-icon> Categorias</a>
+      </li>
     </ul>
   </aside>
+  }
 
-  <main class="flex-1">
+  <main
+    class="main-content"
+    [@expandContent]="isHidden() ? 'full' : 'withSidebar'"
+  >
     <router-outlet />
   </main>
 </section>
