--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -5,9 +5,7 @@
     </p-button>
 
     <div class="relative">
-      <button
-        class="w-10 h-10 rounded-full overflow-hidden border-2 border-gray-300 focus:outline-none"
-      >
+      <button class="w-10 h-10 rounded-full overflow-hidden border-2 border-gray-300 focus:outline-none">
         <img src="user.png" alt="User Avatar" />
       </button>
     </div>
