--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -1,3 +1,5 @@
+<!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
+<!-- eslint-disable @angular-eslint/template/click-events-have-key-events -->
 <header class="bg-white shadow-md">
   <nav class="flex items-center px-4 h-full justify-between">
     <p-button icon="pi pi-bars" (click)="toggleSidebar()">
@@ -5,9 +7,23 @@
     </p-button>
 
     <div class="relative">
-      <button class="w-10 h-10 rounded-full overflow-hidden border-2 border-gray-300 focus:outline-none">
+      <button
+        id="topbar-btn"
+        class="w-10 h-10 rounded-full overflow-hidden border-2 border-gray-300 focus:outline-none"
+        (click)="op.toggle($event)"
+      >
         <img src="user.png" alt="User Avatar" />
       </button>
+
+      <p-popover #op>
+        <div class="popover-container flex flex-col gap-4">
+          <ul class="p-0 m-0 flex flex-col">
+            <li (click)="logout($event)">
+              <a>Sair</a>
+            </li>
+          </ul>
+        </div>
+      </p-popover>
     </div>
   </nav>
 </header>
