--- a/src/app/layouts/topbar/topbar.component.scss
+++ b/src/app/layouts/topbar/topbar.component.scss
@@ -1,3 +1,24 @@
 header {
-  height: 6vh;
+  height: 7vh;
+}
+
+.popover-container {
+  width: 7rem;
+
+  ul li {
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #333;
+    }
+  }
+}
+
+::ng-deep {
+  .p-popover::before,
+  .p-popover::after {
+    display: none !important;
+  }
 }
