feat: create new view components

--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <aside class="h-full sidebar" [@slide]="isHidden() ? 'closed' : 'open'">
   <ul>
     <li>
-      <a href="expenses"><mat-icon color="primary">shopping_cart</mat-icon> Gastos</a>
+      <a routerLink="expenses"><mat-icon color="primary">shopping_cart</mat-icon> Gastos</a>
     </li>
     <li>
-      <a href="categories"><mat-icon color="primary">folder</mat-icon> Categorias</a>
+      <a routerLink="categories"><mat-icon color="primary">folder</mat-icon> Categorias</a>
     </li>
   </ul>
 </aside>
