--- a/src/app/views/expenses/expenses.component.html
+++ b/src/app/views/expenses/expenses.component.html
@@ -1,27 +1,23 @@
-<div style="padding: 20px">
-  <div>
-    <p-button label="Adicionar Gasto" />
-  </div>
-
-  <div>
-    <p-table [value]="expenses()">
-      <ng-template #header>
-        <tr>
-          <th>Nome</th>
-          <th>Valor</th>
-          <th>Descrição</th>
-          <th>Categoria</th>
-        </tr>
-      </ng-template>
-
-      <ng-template #body let-expense>
-        <tr>
-          <td>{{ expense.name }}</td>
-          <td>{{ expense.value | currency: "BRL" }}</td>
-          <td>{{ expense.description }}</td>
-          <td>{{ expense.expenseKind?.name }}</td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
+<div class="pb-3">
+  <p-button label="Adicionar Gasto" />
 </div>
+
+<p-table [value]="expenses()">
+  <ng-template #header>
+    <tr>
+      <th>Nome</th>
+      <th>Valor</th>
+      <th>Descrição</th>
+      <th>Categoria</th>
+    </tr>
+  </ng-template>
+
+  <ng-template #body let-expense>
+    <tr>
+      <td>{{ expense.name }}</td>
+      <td>{{ expense.value | currency: "BRL" }}</td>
+      <td>{{ expense.description }}</td>
+      <td>{{ expense.expenseKind?.name }}</td>
+    </tr>
+  </ng-template>
+</p-table>
