--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -1,1 +1,19 @@
-<p>categories works!</p>
+<div class="pb-3">
+  <p-button label="Adicionar Gasto" />
+</div>
+
+<p-table [value]="categories()">
+  <ng-template #header>
+    <tr>
+      <th>Nome</th>
+      <th>Descrição</th>
+    </tr>
+  </ng-template>
+
+  <ng-template #body let-category>
+    <tr>
+      <td>{{ category.name }}</td>
+      <td>{{ category.description }}</td>
+    </tr>
+  </ng-template>
+</p-table>
