feat: List categories

--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -1,5 +1,5 @@
 <div class="pb-3">
-  <p-button label="Adicionar Gasto" />
+  <p-button label="Adicionar Categoria" routerLink="/categories/novo" />
 </div>
 
 <p-table [value]="categories()">
