fix: logout errors

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -18,9 +18,7 @@
       <p-popover #op>
         <div class="popover-container flex flex-col gap-4">
           <ul class="p-0 m-0 flex flex-col">
-            <li (click)="logout($event)">
-              <a>Sair</a>
-            </li>
+            <li (click)="logout($event)">Sair</li>
           </ul>
         </div>
       </p-popover>
